# faster-rcnn-cplusplus2

./: CMakeLists.txt  README.md  demo.cpp  faster-api.cpp  faster-api.h  roi_pooling_layer.cu  rpn_layer.cpp  rpn_layer.hpp  testImage.txt
models/: README.md  test.prototxt
